font size switch

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <style type="text/css">
         body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5}
-        h1 { font-family: Arial, sans-serif; font-size: 32px; color: lightgray;  }     
+        h1 { font-family: Arial, sans-serif; /*font-size: 32px;*/ color: lightgray;  }     
 
-        nav { font-family: "Courier New", monospace; font-size: 18px; color: dimgray;  }
+        nav { font-family: "Courier New", monospace; /*font-size: 18px;*/ color: dimgray;  }
         a:link { color: darkgray; background-color: transparent; text-decoration: none; }
         a:visited { color: darkgray; background-color: transparent; text-decoration: none; }
         a:hover { color: lightgray; background-color: transparent; text-decoration: none; }
         a:active { color: lightgray; background-color: transparent; text-decoration: none; }
 
-        #article_text { font-family: Arial, sans-serif; font-size: 14px; color: darkgray;}
-        #article_links { font-family: "Courier New", monospace; font-size: 14px; color: darkgray;}
+        #article_text { font-family: Arial, sans-serif; /*font-size: 14px;*/ color: darkgray;}
+        #article_links { font-family: "Courier New", monospace; /*font-size: 14px;*/ color: darkgray;}
 
-        .footers { font-family: Arial, sans-serif; font-size: 14px; color: dimgray;  }
+        .footers { font-family: Arial, sans-serif; /*font-size: 14px;*/ color: dimgray;  }
 
         .customHr {
             background-color: dimgray;
