--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 
 <body>
     <style type="text/css">
-        body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5}
-        h1 { font-family: Arial, sans-serif; /*font-size: 32px;*/ color: lightgray;  }     
+        body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
+        h2 { font-family: Arial, sans-serif; color: lightgray;  }     
 
-        nav { font-family: "Courier New", monospace; /*font-size: 18px;*/ color: dimgray;  }
-        a:link { color: darkgray; background-color: transparent; text-decoration: none; }
-        a:visited { color: darkgray; background-color: transparent; text-decoration: none; }
-        a:hover { color: lightgray; background-color: transparent; text-decoration: none; }
-        a:active { color: lightgray; background-color: transparent; text-decoration: none; }
+        nav { font-family: "Courier New", monospace; color: dimgray;  }
+        a:link { color: darkgray; text-decoration: none; }
+        a:visited { color: darkgray; text-decoration: none; }
+        a:hover { color: lightgray; text-decoration: none; }
+        a:active { color: lightgray; text-decoration: none; }
 
-        #article_text { font-family: Arial, sans-serif; /*font-size: 14px;*/ color: darkgray;}
-        #article_links { font-family: "Courier New", monospace; /*font-size: 14px;*/ color: darkgray;}
+        #article_text { font-family: Arial, sans-serif; color: darkgray; }
+        #article_links { font-family: "Courier New", monospace; color: darkgray; }
 
-        .footers { font-family: Arial, sans-serif; /*font-size: 14px;*/ color: dimgray;  }
+        .footers { font-family: Arial, sans-serif; color: dimgray;  }
 
         .customHr {
             background-color: dimgray;
@@ -29,7 +29,7 @@
         }
     </style>
 
-    <header><h1><a href="" id="homelink">Keehong Youn</a></h1></header>
+    <header><h2><a href="" id="homelink">Keehong Youn</a></h1></header>
 
     <nav>
         <!-- when clicked, changes content in `article` -->
