--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         a:hover { color: lightgray; text-decoration: none; }
         a:active { color: lightgray; text-decoration: none; }
 
-        #article_text { font-family: Arial, sans-serif; color: darkgray; }
+        #article_text { font-family: Arial, sans-serif; color: red; }
         #article_links { font-family: "Courier New", monospace; color: darkgray; }
 
         .footers { font-family: Arial, sans-serif; color: dimgray;  }
