--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <style type="text/css">
+        html * {max-height:1000000px;}
         body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
         h2 { font-family: Arial, sans-serif; color: lightgray;  }     
 
