--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keehong Youn</title>
     <script src="main.js"></script>
-</head>
-
-<body>
     <style type="text/css">
         html * {max-height:1000000px;} /* hack to disable font boosting*/
         body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
@@ -29,7 +27,9 @@
             height: 1px;
         }
     </style>
+</head>
 
+<body>
     <header><h2><a href="" id="homelink">Keehong Youn</a></h1></header>
 
     <nav>
