--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keehong Youn</title>
     <script src="main.js"></script>
+    <title>Keehong Youn</title>
+
+    <!-- for responsive font size -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <style type="text/css">
         html * {max-height:1000000px;} /* hack to disable font boosting*/
         body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
@@ -33,7 +36,7 @@
     <header><h2><a href="" id="homelink">Keehong Youn</a></h1></header>
 
     <nav>
-        <!-- when clicked, changes content in `article` -->
+        <!-- when clicked, changes content in <article> -->
         <a class="navlink" href="" id="link04">link4</a>&nbsp;|
         <a class="navlink" href="" id="link03">link3</a>&nbsp;|
         <a class="navlink" href="" id="link02">link2</a>&nbsp;|
@@ -42,9 +45,11 @@
         <a class="navlink" href="" id="link00">about</a>
     </nav>
 
+    <!-- custom horizontal line -->
     <div class="customHr"></div>
 
     <article>
+        <!-- prepare place holders, js will add content -->
         <p id="article_text"></p>
         <p id="article_links"></p>
     </article>
