--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style type="text/css">
         html * {max-height:1000000px;} /* hack to disable font boosting*/
         body { background: black; margin-left: 5%; margin-right: 5%; line-height: 1.5 }
-        h2 { font-family: Arial, sans-serif; color: lightgray;  }     
+        h2 { font-family: Arial, sans-serif; color: lightgray; }
 
         nav { font-family: "Courier New", monospace; color: dimgray;  }
         a:link { color: darkgray; text-decoration: none; }
@@ -42,7 +42,8 @@
         <a class="navlink" href="" id="link02">link2</a>&nbsp;|
         <a class="navlink" href="" id="link01">link1</a>
         <br>
-        <a class="navlink" href="" id="link00">about</a>
+        <a class="navlink" href="" id="blog">blog</a>&nbsp;|
+        <a class="navlink" href="" id="about">about</a>&nbsp;|
     </nav>
 
     <!-- custom horizontal line -->
