simpler structure, using html files

--- a/about.html
+++ b/about.html
@@ -13,12 +13,19 @@
     <header><!-- js fills header content --></header>
     <nav><!-- js fills nav content --></nav>
     <div class="customHorizontalLine"></div>
-
     <article>
-        <p id="article_text"></p>
-        <p id="article_links"></p>
-    </article>
+        <p id="article_text">
 
+        about page
+
+        </p>
+        <p id="article_links">
+
+            links<br>
+            - <a href="http://www.github.com/younkhg" target="_blank"><u>github</u></a><br>
+
+        </p>
+    </article>
     <div class="customHorizontalLine"></div>
     <footer><!-- js fills footer content --></footer>
 </body>
