--- a/blog00.html
+++ b/blog00.html
@@ -17,19 +17,14 @@
     <article>
 <!-- don't edit above -->
         <p id="article_text">
-
-            about page
-
+            blog article 00
         </p>
         <p id="article_links">
-
-            links<br>
-            - <a href="http://www.github.com/younkhg" target="_blank"><u>github</u></a><br>
-
+            
         </p>
 <!-- don't edit below -->
     </article>
-    
+
     <div class="customHorizontalLine"></div>
     <footer><!-- js fills footer content --></footer>
 </body>
