--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <div class="customHorizontalLine"></div>
 
     <article>
-        <p id="article_text"></p>
-        <p id="article_links"></p>
+<!-- don't edit above -->
+        <p id="article_text">
+            
+        </p>
+        <p id="article_links">
+            
+        </p>
+<!-- don't edit below -->
     </article>
 
     <div class="customHorizontalLine"></div>
