--- a/rotation01.html
+++ b/rotation01.html
@@ -16,14 +16,40 @@
     <article>
         <p id="article_text">
 
-            But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone
+            Rotations, n=3<br><br>
+
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<iframe src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+
+            In three dimensions, rotations have their axis.
+            However, starting from four dimensions, it becomes complicated
+            to deal with rotation only with one given axis.
+            Thinking with `plane of rotation` rather than an axis
+            helps dealing with rotations in higher dimensions.
+            One kind of rotations are called `simple rotation`,
+            having only one plane of rotation. Other higer dimensional
+            rotations can have more than one planes of rotation.
+            Here, as a proof of concept for simple rotation as audiovisual material,
+            presented is a special case of N=3.<br><br>
+
+            So a plane can rotate a vector. Meanwhile, Two vectors define a plane,
+            the term `bivector` from geometric algebra also relates to this.
+            If two vectors that consist plane of rotation are rotated by other two planes,
+            it has similar effect as changing the axis of rotation.
+            Although, here, to modify a plane of rotation (two vectors),
+            two planes (four vectors) are needed. If this relation is stacked by
+            multiple layers, the result is somewhat similar to:<br><br>
+
+            "There is a rotation that rotates axis of the rotation that rotates axis of ..."<br><br>
+
+            Only difference is that the number of plane of rotations increase in power of 2.
 
         </p>
         <p id="article_links">
 
             links<br>
-            - <a href="http://www.google.com" target="_blank"><u>google</u></a><br>
-            - <a href="http://www.naver.com" target="_blank"><u>naver</u></a><br>
+            - Wikipedia: <a href="https://en.wikipedia.org/wiki/Plane_of_rotation" target="_blank">
+                <u>Plane of Rotation</u></a><br>
 
         </p>
     </article>
