--- a/blog_main.html
+++ b/blog_main.html
@@ -17,19 +17,13 @@
     <article>
 <!-- don't edit above -->
         <p id="article_text">
-
-            about page
-
+            <a href="blog00.html"><u>a blog article</u></a><br>
         </p>
         <p id="article_links">
-
-            links<br>
-            - <a href="http://www.github.com/younkhg" target="_blank"><u>github</u></a><br>
-
         </p>
 <!-- don't edit below -->
     </article>
-    
+
     <div class="customHorizontalLine"></div>
     <footer><!-- js fills footer content --></footer>
 </body>
