update rotations video

--- a/rotation01.html
+++ b/rotation01.html
@@ -20,6 +20,8 @@
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             <iframe src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <iframe src="https://player.vimeo.com/video/229976817?byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
 
             In three dimensions, rotations have their axis.
             However, starting from four dimensions, it becomes complicated
@@ -30,7 +32,7 @@
             having only one plane of rotation. Other higer dimensional
             rotations can have more than one planes of rotation.
             Here, as a proof of concept for simple rotation as audiovisual material,
-            presented is a special case of N=3.<br><br>
+            presented is a relatively trivial case of three dimensions (N=3).<br><br>
 
             So a plane can rotate a vector. Meanwhile, Two vectors define a plane,
             the term `bivector` from geometric algebra also relates to this.
@@ -43,6 +45,7 @@
             "There is a rotation that rotates axis of the rotation that rotates axis of ..."<br><br>
 
             Only difference is that the number of plane of rotations increase in power of 2.
+            1 vector rotated by 1 plane, 1 plane rotated by 2 planes, 2 planes rotated by 4 planes, ...
 
         </p>
         <p id="article_links">
