--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -15,7 +15,18 @@
     <div class="customHorizontalLine"></div>
     <article>
         <p id="article_text">
-            blog article 00
+            Balanced Movement<br><br>
+
+            <img src="http://spectrum.mat.ucsb.edu/~keehong/data/balmov/01.png">
+
+
+            Though stochastic process, a dynamic equilibrium can be achieved.
+            Transition between three action states
+            (generation, modifcation, and destruction)
+            via transition probability matrix, canvas continuously changes
+            but the overall cahracteristic is preserved.<br><br>
+
+            
         </p>
         <p id="article_links">
             
