--- a/about.html
+++ b/about.html
@@ -10,12 +10,10 @@
 </head>
 
 <body>
-    <header><!-- js fills header content --></header>
+    <header><h2><a href="index.html">Keehong Youn</a></h1></header>
     <nav><!-- js fills nav content --></nav>
     <div class="customHorizontalLine"></div>
-
     <article>
-<!-- don't edit above -->
         <p id="article_text">
 
             about page
@@ -27,11 +25,9 @@
             - <a href="http://www.github.com/younkhg" target="_blank"><u>github</u></a><br>
 
         </p>
-<!-- don't edit below -->
     </article>
-    
     <div class="customHorizontalLine"></div>
-    <footer><!-- js fills footer content --></footer>
+    <footer><p class="footers">younkeehong@gmail.com</p></footer>
 </body>
 
 </html>
