--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 </head>
 
 <body>
-    <header><!-- js fills header content --></header>
+    <header><h2><a href="index.html">Keehong Youn</a></h1></header>
     <nav><!-- js fills nav content --></nav>
     <div class="customHorizontalLine"></div>
-
     <article>
-<!-- don't edit above -->
         <p id="article_text">
             
         </p>
         <p id="article_links">
             
         </p>
-<!-- don't edit below -->
     </article>
-
     <div class="customHorizontalLine"></div>
-    <footer><!-- js fills footer content --></footer>
+    <footer><p class="footers">younkeehong@gmail.com</p></footer>
 </body>
 
 </html>
