--- a/rotations_n3.html
+++ b/rotations_n3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header><!-- js fills header content --></header>
+    <header><h2><a href="index.html">Keehong Youn</a></h1></header>
     <nav><!-- js fills nav content --></nav>
     <div class="customHorizontalLine"></div>
     <article>
@@ -18,10 +18,10 @@
 
             Rotations, n=3<br><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <iframe src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <iframe src="https://player.vimeo.com/video/229976817?byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+            <!-- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -->
+            <iframe src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+            <!-- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -->
+            <iframe src="https://player.vimeo.com/video/229976817?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
 
             In three dimensions, rotations have their axis.
             However, starting from four dimensions, it becomes complicated
@@ -57,7 +57,7 @@
         </p>
     </article>
     <div class="customHorizontalLine"></div>
-    <footer><!-- js fills footer content --></footer>
+    <footer><p class="footers">younkeehong@gmail.com</p></footer>
 </body>
 
 </html>
