--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -17,7 +17,8 @@
         <p id="article_text">
             Balanced Movement<br><br>
 
-            <img src="http://spectrum.mat.ucsb.edu/~keehong/data/balmov/01.png">
+            <!-- <img class="visualContent" src="http://spectrum.mat.ucsb.edu/~keehong/data/balmov/01.png"> -->
+            <img class="visualContent" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"><br><br>
 
 
             Though stochastic process, a dynamic equilibrium can be achieved.
