--- a/rotations_n3.html
+++ b/rotations_n3.html
@@ -19,9 +19,9 @@
             Rotations, n=3<br><br>
 
             <!-- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -->
-            <iframe src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+            <iframe class="visualContent" src="https://player.vimeo.com/video/226127108?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
             <!-- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -->
-            <iframe src="https://player.vimeo.com/video/229976817?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
+            <iframe class="visualContent" src="https://player.vimeo.com/video/229976817?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br><br>
 
             In three dimensions, rotations have their axis.
             However, starting from four dimensions, it becomes complicated
