--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -17,8 +17,10 @@
         <p id="article_text">
             Balanced Movement<br><br>
 
-            <!-- <img class="visualContent" src="http://spectrum.mat.ucsb.edu/~keehong/data/balmov/01.png"> -->
-            <img class="visualContent" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"><br><br>
+            <!-- <img src="http://spectrum.mat.ucsb.edu/~keehong/data/balmov/01.png"> -->
+            <img class="imageClass" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"><br><br>
+
+            <!-- <img class="imageClass" width=960 src="http://www.rlfbckr.org/images/work_graphics/random-access-memory/10-Random_Access_Memory-Software_Screenshot-2016.png"><br><br> -->
 
 
             Though stochastic process, a dynamic equilibrium can be achieved.
