new manual site

--- a/blog001.html
+++ b/blog001.html
@@ -22,9 +22,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p><a href="work03.html">Work 03</a></p>
-  <p><a href="work02.html">Work 02</a></p>
-  <p><a href="work01.html">Work 01</a></p>
+  <p>old blog post</p>
 </div>
 
 </body>
