--- a/about.html
+++ b/about.html
@@ -22,9 +22,11 @@
 </div>
 
 <div class="site-container content-container">
-  <p><a href="work03.html">Work 03</a></p>
-  <p><a href="work02.html">Work 02</a></p>
-  <p><a href="work01.html">Work 01</a></p>
+  <p>Generative visuals and sound</p>
+  <p>Ph.D. candidate in Media Arts and Technology, University of California, Santa Barbara</p>
+  <p>Master's Degree in Mechnical Engineering, Seoul National University</p>
+  <p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>
+  <p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>
 </div>
 
 </body>
