add font and divide home page and projects page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
@@ -15,16 +16,14 @@
     <a href="index.html">Keehong Youn</a>
   </div>
   <div class="right-nav">
-    <a href="index.html">Projects</a>&nbsp;|&nbsp;
-    <a href="blog.html">Blog</a>&nbsp;|&nbsp;
+    <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
 <div class="site-container content-container">
-  <p><a href="work03.html">Work 03</a></p>
-  <p><a href="work02.html">Work 02</a></p>
-  <p><a href="work01.html">Work 01</a></p>
+  <p>A welcome screen</p>
 </div>
 
 </body>
