--- a/projects.html
+++ b/projects.html
@@ -22,10 +22,10 @@
   </div>
 </div>
 
-<div class="site-container content-container bloglink-container">
-  <p><a href="blog003.html">recent blog post</a></p>
-  <p><a href="blog002.html">previous blog post</a></p>
-  <p><a href="blog001.html">old blog post</a></p>
+<div class="site-container content-container projectlink-container">
+  <p><a href="work03.html">Work 03</a></p>
+  <p><a href="work02.html">Work 02</a></p>
+  <p><a href="work01.html">Work 01</a></p>
 </div>
 
 </body>
