--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 </div>
 
 <div class="site-container content-container">
-  <p>Generative visuals and sound</p>
+  <p>Generative visual and sound</p>
   <p>Ph.D. candidate in Media Arts and Technology, University of California, Santa Barbara</p>
-  <p>Master's Degree in Mechnical Engineering, Seoul National University</p>
+  <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
   <p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>
   <p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>
 </div>
