--- a/allosphere.html
+++ b/allosphere.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p>recent work</p>
+  <p>I work at AlloSphere Research Group</p>
 </div>
 
 </body>
