--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -23,7 +23,10 @@
 </div>
 
 <div class="site-container content-container">
-  <p>previous work</p>
+  <p><h2>Balanced Movement</h2></p>
+  
+  <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained.</p>  
+
 </div>
 
 </body>
