--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,9 @@
 </div>
 
 <div class="site-container content-container bloglink-container">
-  <p><a href="blog003.html">recent blog post</a></p>
-  <p><a href="blog002.html">previous blog post</a></p>
-  <p><a href="blog001.html">old blog post</a></p>
+  <p><a href="stacked_rotations.html">Stacked Rotations</a></p>
+  <p><a href="allolib.html">allolib</a></p>
+  <p><a href="allosphere.html">AlloSphere</a></p>
 </div>
 
 </body>
