--- a/slit_scanning.html
+++ b/slit_scanning.html
@@ -23,7 +23,12 @@
 </div>
 
 <div class="site-container content-container">
-  <p>recent blog post</p>
+  <p><h2>Multi-Layered Slit Scanning</h2></p>
+  
+  <p>Multiple layers of slits in front of the touch screen enables a touch screen to have a context. While normal touch screens only have binary input, touch screen with multiple layered slit scanning can utilize the trajectory of finger.</p>
+
+  <p>Possible application: adopting to car navigation system. For better experience of car navigation system, a kind of interface can be made that can interactively act to approaching fingers and aid the selections of the target near the finger by enlarging the size of it. Research about this concept was done through association with Hyundai NGV.</p>
+
 </div>
 
 </body>
