--- a/elascreen.html
+++ b/elascreen.html
@@ -23,15 +23,15 @@
 </div>
 
 <div class="site-container content-container">
-  <p>
-  <a href="reconstruction.html">
-    <img src="img/recon_main.png" alt="reconstruction main image" class="body-img">
-  </a>
-  </p>
-  <p class="body-caption projectlink-container">
-    <a href="reconstruction.html">Reconstruction, 2018</a>
-  </p>
+  <p><h2>ElaScreen</h2></p>
+  
+  <p>ElaScreen uses a elastic screen to give user a tangible experience with natural force feedback. It quite works similar to a 2D touchpad but enables 3-dimensional input by pressing and pulling action on the screen.</p>
 
+  <p>It can be utilized for navigation of 3-dimensional information such as CAD models, and also for implementing passive force feedback on information visualization.</p>
+
+  <p>SIGCHI2013, Extended Abstracts, <ElaScreen: Exploring Multi-dimensional Data using Elastic Screen> by Kyungwon Youn, Junbong Song, Keehong Youn, Sungmin Cho, Hyunwoo Bang</p>
+
+  <p><a href="http://dl.acm.org/citation.cfm?id=2468590">Link to paper</a></p>
 </div>
 
 </body>
