--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,33 @@
 </div>
 
 <div class="site-container content-container projectlink-container">
-  <p><a href="work03.html">Work 03</a></p>
-  <p><a href="work02.html">Work 02</a></p>
-  <p><a href="work01.html">Work 01</a></p>
+  
+  <p><a href="reconstruction.html">
+    <img src="img/recon_preview.png" alt="reconstruction preview image" class="preview-img">
+    Reconstruction
+  </a></p>
+
+  <p><a href="balanced_movement.html">
+    <img src="img/balmov_preview.png" alt="balanced movement preview image" class="preview-img">
+    Balanced Movement
+  </a></p>
+
+  <p><a href="ancient_stains.html">
+    <img src="img/stains_preview.png" alt="ancient stains preview image" class="preview-img">
+    Ancient Stains
+  </a></p>
+
+  <p><a href="spherical_flocking.html">
+    <img src="img/flocking_preview.png" alt="spherical flocking preview image" class="preview-img">
+    Spherical Flocking
+  </a></p>
+  
+  <p>&nbsp;</p>
+  <p><a href="slit_scanning.html">Multi Layer Slit Scanning</a></p>
+  <p></p>
+  <p><a href="amp.html">Amp</a></p>
+  <p></p>
+  <p><a href="elascreen.html">Elascreen</a></p>
 </div>
 
 </body>
