--- a/amp.html
+++ b/amp.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p><h2>Amp</h2></p>
+  <h2>Amp</h2>
 
   <p>Nowadays, digital world, especially the internet network, is often said to have some kind of power that create, generate, or make changes in the real world. However this statement might give an exaggerating notion about the digital world. When we look into the mechanism how it changes the real world, we can soon notice that it is a mere amplifier that delivers or spreads the input from the real world and give out the amplified output back to the real world.</p>
 
