--- a/balanced_movement.html
+++ b/balanced_movement.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p><h2>Balanced Movement</h2></p>
+  <h2>Balanced Movement</h2>
   
   <p>Though stochastic process, a dynamic equilibrium can be achieved. By transition between three different action states (generation, modifcation, and destruction) governed by transition probability matrix, canvas continuously changes. However, the overall chracteristic determined by the transition probability matrix is maintained.</p>  
 
