--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -22,10 +22,20 @@
   </div>
 </div>
 
-<div class="site-container content-container bloglink-container">
-  <p><a href="stacked_rotations.html">Stacked Rotations</a></p>
-  <p><a href="allolib.html">allolib</a></p>
-  <p><a href="allosphere.html">AlloSphere</a></p>
+<div class="site-container">
+  
+  <p class="postlink-p">
+    <a href="stacked_rotations.html">Stacked Rotations</a>
+  </p>
+  
+  <p class="postlink-p">
+    <a href="allolib.html">allolib</a>
+  </p>
+
+  <p class="postlink-p">
+    <a href="allosphere.html">AlloSphere</a>
+  </p>
+
 </div>
 
 </body>
