--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -22,34 +22,58 @@
   </div>
 </div>
 
-<div class="site-container content-container projectlink-container">
+<div class="site-container">
   
-  <p><a href="reconstruction.html">
-    <img src="img/recon_preview.png" alt="reconstruction preview image" class="preview-img">
-    Reconstruction
-  </a></p>
+  <p class="preview-img-p">
+    <a href="reconstruction.html">
+      <img src="img/recon_preview.png" alt="recon preview">
+    </a>
+  </p>
+  <p class="postlink-p">
+    <a href="reconstruction.html">Reconstruction</a>
+  </p>
 
-  <p><a href="balanced_movement.html">
-    <img src="img/balmov_preview.png" alt="balanced movement preview image" class="preview-img">
-    Balanced Movement
-  </a></p>
+  <p class="preview-img-p">
+    <a href="balanced_movement.html">
+      <img src="img/balmov_preview.png" alt="balmov preview">
+    </a>
+  </p>
+  <p class="postlink-p">
+    <a href="balanced_movement.html">Balanced Movement</a>
+  </p>
 
-  <p><a href="ancient_stains.html">
-    <img src="img/stains_preview.png" alt="ancient stains preview image" class="preview-img">
-    Ancient Stains
-  </a></p>
+  <p class="preview-img-p">
+    <a href="ancient_stains.html">
+      <img src="img/stains_preview.png" alt="stains preview">
+    </a>
+  </p>
+  <p class="postlink-p">
+    <a href="ancient_stains.html">Ancient Stains</a>
+  </p>
 
-  <p><a href="spherical_flocking.html">
-    <img src="img/flocking_preview.png" alt="spherical flocking preview image" class="preview-img">
-    Spherical Flocking
-  </a></p>
-  
+  <p class="preview-img-p">
+    <a href="spherical_flocking.html">
+      <img src="img/flocking_preview.png" alt="flocking preview">
+    </a>
+  </p>
+  <p class="postlink-p">
+    <a href="spherical_flocking.html">Spherical Flocking</a>
+  </p>
+
   <p>&nbsp;</p>
-  <p><a href="slit_scanning.html">Multi Layer Slit Scanning</a></p>
-  <p></p>
-  <p><a href="amp.html">Amp</a></p>
-  <p></p>
-  <p><a href="elascreen.html">Elascreen</a></p>
+
+  <p class="postlink-p">
+    <a href="slit_scanning.html">Multi Layer Slit Scanning</a>
+  </p>
+
+  <p class="postlink-p">
+    <a href="amp.html">Amp</a>
+  </p>
+
+  <p class="postlink-p">
+    <a href="elascreen.html">Elascreen</a>
+  </p>
+
 </div>
 
 </body>
