--- a/reconstruction.html
+++ b/reconstruction.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,9 +23,9 @@
 </div>
 
 <div class="site-container content-container">
-  <p><h2>Reconstruction</h2></p>
+  <h2>Reconstruction</h2>
   
-  <p>Reconstruction' tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. Established is a characteristic function that takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.</p>
+  <p>Reconstruction tries to generate virtual geographical shapes from spectrum of frequencies that are observed from static materials such as image. Established is a characteristic function that takes a spectrum and returns a procedurally generated shape. The function mostly focuses on re-interpretation of spectrum into other dimensions, units, or parameters, while also taking consideration in fractal-like nature of geographic geometries. With generated shape, a short audio visual composition is presented, utilizing different rendering styles and camera position/movement.</p>
 
 </div>
 
