--- a/slit_scanning.html
+++ b/slit_scanning.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p><h2>Multi-Layered Slit Scanning</h2></p>
+  <h2>Multi-Layered Slit Scanning</h2>
   
   <p>Multiple layers of slits in front of the touch screen enables a touch screen to have a context. While normal touch screens only have binary input, touch screen with multiple layered slit scanning can utilize the trajectory of finger.</p>
 
