--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p>Spherical Flocking</p>
+  <h2>Spherical Flocking</h2>
 
   <p>Based on flocking rule of Craig W. Reynolds a modified rule was designed and applied to agents to simulate behavior of group of fishes underwater. Fishes are presented in shadow, for dark silhouette to give a feeling of deep see where lights only comes from above, with water ripples shape.</p>
 
