--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,11 +23,13 @@
 </div>
 
 <div class="site-container content-container">
+
   <p>Generative visual and sound</p>
-  <p>Ph.D. candidate in Media Arts and Technology, University of California, Santa Barbara</p>
+  <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
   <p>Master's Degree in Mechanical Engineering, Seoul National University</p>
   <p><a href="https://www.github.com/younkhg" target="_blank">www.github.com/younkhg</a></p>
   <p><a href="https://www.vimeo.com/younkhg" target="_blank">www.vimeo.com/younkhg</a></p>
+
 </div>
 
 </body>
