--- a/ancient_stains.html
+++ b/ancient_stains.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="site-container content-container">
-  <p><h2>Ancient Stains</h2></p>
+  <h2>Ancient Stains</h2>
 
   <p>Diffusion and reaction of two chemicals make a dynamic pattern in space. By presenting a volume this phenomenon is happening in, an experience with space of dynamic behavior could be introduced. This work is inspired by Kinetoscopes used for storytelling in Bioshock: Infinite. A kinetoscope, a physical box with a eye hole on top, will be presented, having a screen inside on the floor of it. Having only a small hole will allow the display to be seen in intended view angle and position, overcoming the limit of 2D display in terms of spatial feeling it can give.</p>
 
