--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -22,13 +22,15 @@
   </div>
 </div>
 
-<div class="site-container content-container">
-  <p>
-  <a href="reconstruction.html">
-    <img src="img/recon_main.png" alt="reconstruction main image" class="body-img">
-  </a>
+<div class="site-container">
+
+  <p class="body-img-p">
+    <a href="reconstruction.html">
+      <img src="img/recon_main.png" alt="reconstruction main image">
+    </a>
   </p>
-  <p class="body-caption projectlink-container">
+
+  <p class="body-caption-p postlink-p">
     <a href="reconstruction.html">Reconstruction, 2018</a>
   </p>
 
