--- a/stacked_rotations.html
+++ b/stacked_rotations.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="site-container nav-container">
+<div class="nav-container">
   <div class="left-nav">
     <a href="index.html">Keehong Youn</a>
   </div>
@@ -23,7 +23,14 @@
 </div>
 
 <div class="site-container content-container">
-  <p>old work</p>
+  <h2>Stacked Rotations</h2>
+
+  <p>In three dimensions, rotations have their axis. However, starting from four dimensions, it becomes complicated to deal with rotation only with one given axis. Thinking with 'plane of rotation' rather than an axis makes dealing with rotations in higher dimensions easier by constraining the domain to a particular subset. Those rotations are called 'simple rotation', having only one plane of rotation. Other higer dimensional rotations can have more than one planes of rotation.</p>
+
+  <p>Here, as a proof of concept for simple rotation as audiovisual material, presented is a relatively trivial case of three dimensions(N=3).</p>
+
+  <p>So a plane can rotate a vector. Meanwhile, Two vectors define a plane, the term `bivector` from geometric algebra also relates to this. If two vectors that consist plane of rotation are rotated by other two planes, it has similar effect as changing the axis of rotation. Although, here, to modify a plane of rotation (two vectors), two planes (four vectors) are needed. When this relation is stacked by multiple layers, a complex trajectory comes out</p>
+
 </div>
 
 </body>
