--- a/about.html
+++ b/about.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container content-container">
+<div class="content-container">
 
   <p>Generative visual and sound</p>
   <p>Ph.D. candidate in Media Arts and Technology, UCSB</p>
