--- a/amp.html
+++ b/amp.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container content-container">
+<div class="content-container">
   <h2>Amp</h2>
 
   <p>Nowadays, digital world, especially the internet network, is often said to have some kind of power that create, generate, or make changes in the real world. However this statement might give an exaggerating notion about the digital world. When we look into the mechanism how it changes the real world, we can soon notice that it is a mere amplifier that delivers or spreads the input from the real world and give out the amplified output back to the real world.</p>
