--- a/index.html
+++ b/index.html
@@ -6,33 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
-</div>
+<div>
 
-<div class="site-container">
-
-  <p class="body-img-p">
+<div class="list-container">
+  <div class="body-img">
     <a href="reconstruction.html">
       <img src="img/recon_main.png" alt="reconstruction main image">
+      Reconstruction, 2018
     </a>
-  </p>
-
-  <p class="body-caption-p postlink-p">
-    <a href="reconstruction.html">Reconstruction, 2018</a>
-  </p>
+  </div>
 
 </div>
 
