--- a/projects.html
+++ b/projects.html
@@ -6,74 +6,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container">
-  
-  <p class="preview-img-p">
+<div class="list-container">
+  <div class="body-img">
     <a href="reconstruction.html">
       <img src="img/recon_preview.png" alt="recon preview">
+      Reconstruction
     </a>
-  </p>
-  <p class="postlink-p">
-    <a href="reconstruction.html">Reconstruction</a>
-  </p>
+  </div>
 
-  <p class="preview-img-p">
+  <div class="body-img">
     <a href="balanced_movement.html">
       <img src="img/balmov_preview.png" alt="balmov preview">
+      Balanced Movement
     </a>
-  </p>
-  <p class="postlink-p">
-    <a href="balanced_movement.html">Balanced Movement</a>
-  </p>
+  </div>
 
-  <p class="preview-img-p">
+  <div class="body-img">
     <a href="ancient_stains.html">
       <img src="img/stains_preview.png" alt="stains preview">
+      Ancient Stains
     </a>
-  </p>
-  <p class="postlink-p">
-    <a href="ancient_stains.html">Ancient Stains</a>
-  </p>
+  </div>
 
-  <p class="preview-img-p">
+  <div class="body-img">
     <a href="spherical_flocking.html">
       <img src="img/flocking_preview.png" alt="flocking preview">
+      Spherical Flocking
     </a>
-  </p>
-  <p class="postlink-p">
-    <a href="spherical_flocking.html">Spherical Flocking</a>
-  </p>
+  </div>
 
-  <p>&nbsp;</p>
+  <div class="body-img">
+    <a href="slit_scanning.html">
+        Multi Layer Slit Scanning
+    </a>
+  </div>
 
-  <p class="postlink-p">
-    <a href="slit_scanning.html">Multi Layer Slit Scanning</a>
-  </p>
+  <div class="body-img">
+    <a href="amp.html">
+        Amp
+    </a>
+  </div>
 
-  <p class="postlink-p">
-    <a href="amp.html">Amp</a>
-  </p>
-
-  <p class="postlink-p">
-    <a href="elascreen.html">Elascreen</a>
-  </p>
+  <div class="body-img">
+    <a href="elascreen.html">
+        Elascreen
+    </a>
+  </div>
 
 </div>
 
 </body>
+
