--- a/spherical_flocking.html
+++ b/spherical_flocking.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container content-container">
+<div class="content-container">
   <h2>Spherical Flocking</h2>
 
   <p>Based on flocking rule of Craig W. Reynolds a modified rule was designed and applied to agents to simulate behavior of group of fishes underwater. Fishes are presented in shadow, for dark silhouette to give a feeling of deep see where lights only comes from above, with water ripples shape.</p>
