--- a/stacked_rotations.html
+++ b/stacked_rotations.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container content-container">
+<div class="content-container">
   <h2>Stacked Rotations</h2>
 
   <p>In three dimensions, rotations have their axis. However, starting from four dimensions, it becomes complicated to deal with rotation only with one given axis. Thinking with 'plane of rotation' rather than an axis makes dealing with rotations in higher dimensions easier by constraining the domain to a particular subset. Those rotations are called 'simple rotation', having only one plane of rotation. Other higer dimensional rotations can have more than one planes of rotation.</p>
