--- a/ancient_stains.html
+++ b/ancient_stains.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
 
-<div class="site-container content-container">
+<div class="content-container">
   <h2>Ancient Stains</h2>
 
   <p>Diffusion and reaction of two chemicals make a dynamic pattern in space. By presenting a volume this phenomenon is happening in, an experience with space of dynamic behavior could be introduced. This work is inspired by Kinetoscopes used for storytelling in Bioshock: Infinite. A kinetoscope, a physical box with a eye hole on top, will be presented, having a screen inside on the floor of it. Having only a small hole will allow the display to be seen in intended view angle and position, overcoming the limit of 2D display in terms of spatial feeling it can give.</p>
