--- a/blog.html
+++ b/blog.html
@@ -6,35 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 </head>
 
 <body>
 
 <div class="nav-container">
-  <div class="left-nav">
+  <div>
     <a href="index.html">Keehong Youn</a>
   </div>
-  <div class="right-nav">
+  <div>
     <a href="projects.html">Projects</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
 </div>
-
-<div class="site-container">
   
-  <p class="postlink-p">
+<div class="list-container">
+  <div>
     <a href="stacked_rotations.html">Stacked Rotations</a>
-  </p>
+  </div>
   
-  <p class="postlink-p">
+  <div>
     <a href="allolib.html">allolib</a>
-  </p>
+  </div>
 
-  <p class="postlink-p">
+  <div>
     <a href="allosphere.html">AlloSphere</a>
-  </p>
+  </div>
 
 </div>
 
