fix div closing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="blog.html">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="about.html">About</a>
   </div>
-<div>
+</div>
 
 <div class="list-container">
   <div class="body-img">
