--- a/blog.html
+++ b/blog.html
@@ -22,17 +22,18 @@
 </div>
   
 <div class="list-container">
-  <div>
-    <a href="stacked_rotations.html">Stacked Rotations</a>
-  </div>
-  
-  <div>
-    <a href="allolib.html">allolib</a>
-  </div>
 
-  <div>
-    <a href="allosphere.html">AlloSphere</a>
-  </div>
+  <!--<div>-->
+    <!--<a href="stacked_rotations.html">Stacked Rotations</a>-->
+  <!--</div>-->
+  
+  <!--<div>-->
+    <!--<a href="allolib.html">allolib</a>-->
+  <!--</div>-->
+
+  <!--<div>-->
+    <!--<a href="allosphere.html">AlloSphere</a>-->
+  <!--</div>-->
 
 </div>
 
