--- a/projects.html
+++ b/projects.html
@@ -22,51 +22,52 @@
 </div>
 
 <div class="list-container">
-  <div class="body-img">
-    <a href="reconstruction.html">
-      <img src="img/recon_preview.png" alt="recon preview">
-      Reconstruction
-    </a>
-  </div>
 
-  <div class="body-img">
-    <a href="balanced_movement.html">
-      <img src="img/balmov_preview.png" alt="balmov preview">
-      Balanced Movement
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="reconstruction.html">-->
+      <!--<img src="img/recon_preview.png" alt="recon preview">-->
+      <!--Reconstruction-->
+    <!--</a>-->
+  <!--</div>-->
 
-  <div class="body-img">
-    <a href="ancient_stains.html">
-      <img src="img/stains_preview.png" alt="stains preview">
-      Ancient Stains
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="balanced_movement.html">-->
+      <!--<img src="img/balmov_preview.png" alt="balmov preview">-->
+      <!--Balanced Movement-->
+    <!--</a>-->
+  <!--</div>-->
 
-  <div class="body-img">
-    <a href="spherical_flocking.html">
-      <img src="img/flocking_preview.png" alt="flocking preview">
-      Spherical Flocking
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="ancient_stains.html">-->
+      <!--<img src="img/stains_preview.png" alt="stains preview">-->
+      <!--Ancient Stains-->
+    <!--</a>-->
+  <!--</div>-->
 
-  <div class="body-img">
-    <a href="slit_scanning.html">
-        Multi Layer Slit Scanning
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="spherical_flocking.html">-->
+      <!--<img src="img/flocking_preview.png" alt="flocking preview">-->
+      <!--Spherical Flocking-->
+    <!--</a>-->
+  <!--</div>-->
 
-  <div class="body-img">
-    <a href="amp.html">
-        Amp
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="slit_scanning.html">-->
+        <!--Multi Layer Slit Scanning-->
+    <!--</a>-->
+  <!--</div>-->
 
-  <div class="body-img">
-    <a href="elascreen.html">
-        Elascreen
-    </a>
-  </div>
+  <!--<div class="body-img">-->
+    <!--<a href="amp.html">-->
+        <!--Amp-->
+    <!--</a>-->
+  <!--</div>-->
+
+  <!--<div class="body-img">-->
+    <!--<a href="elascreen.html">-->
+        <!--Elascreen-->
+    <!--</a>-->
+  <!--</div>-->
 
 </div>
 
